feat: adaptive investigation
